--- a/.github/workflows/deploy-prod-apps.yml
+++ b/.github/workflows/deploy-prod-apps.yml
@@ -21,11 +21,12 @@ jobs:
         with:
           fetch-depth: 0
      
-      - name: 🏷️🧪 Get latest Prod release
-        id: get_latest_prod_release
+    #  i base my prod version to uat version because of version number 
+      - name: 🏷️🧪 Get latest UAT release
+        id: get_latest_uat_release
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         with:
-          prefix: "v"
+          prefix: "release/uat/"
           fallback: 0.0.1
 
       - name: ⚙️ Prepare semantic release configuration
@@ -46,9 +47,9 @@ jobs:
       - name: 📝 Edit pubspec version
         id: get_new_pubspec_version
         run: |
-          last_prod_release=$(echo "${{ steps.get_latest_prod_release.outputs.tag }}" | sed -E "s/release\/prod\/(.*)/\1/")
-          next_pubspec_version=$(./scripts/semver.sh "$last_prod_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
-          
+          last_uat_release=$(echo "${{ steps.get_latest_uat_release.outputs.tag }}" | sed -E "s/release\/uat\/(.*)/\1/")
+          next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
+
           echo "pubspec.yaml before update:"
           cat pubspec.yaml
           
