--- a/.github/workflows/deploy-prod-apps.yml
+++ b/.github/workflows/deploy-prod-apps.yml
@@ -21,18 +21,18 @@ jobs:
         with:
           fetch-depth: 0
      
-      - name: 🏷️🧪 Get latest Prod release
-        id: get_latest_prod_release
+      - name: 🏷️🧪 Get latest UAT release
+        id: get_latest_uat_release
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         with:
-          prefix: "release/prod/"
+          prefix: "release/uat/"
           fallback: 0.0.1
 
       - name: ⚙️ Prepare semantic release configuration
         run: |
           cp .releaserc.prod.json .releaserc.json
 
-      - name: 🏷️✍️ Create new Prod release tag
+      - name: 🏷️✍️ Create new Prod release with tag and changelog
         id: semantic_release_info
         uses: cycjimmy/semantic-release-action@v4.1.0
         env:
@@ -46,8 +46,8 @@ jobs:
       - name: 📝 Edit pubspec version
         id: get_new_pubspec_version
         run: |
-          last_prod_release=$(echo "${{ steps.get_latest_prod_release.outputs.tag }}" | sed -E "s/release\/prod\/(.*)/\1/")
-          next_pubspec_version=$(./scripts/semver.sh "$last_prod_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
+          last_uat_release=$(echo "${{ steps.get_latest_uat_release.outputs.tag }}" | sed -E "s/release\/uat\/(.*)/\1/")
+          next_pubspec_version=$(./scripts/semver.sh "$last_uat_release" "${{ steps.semantic_release_info.outputs.new_release_version }}")
 
           echo "pubspec.yaml before update:"
           cat pubspec.yaml
@@ -59,17 +59,19 @@ jobs:
 
           echo "next_pubspec_version=$next_pubspec_version" >> $GITHUB_OUTPUT
 
+      # help to update pubspec.yaml file with the new version number
       - name: 🔀 Push bump commit with changelog to repository
         uses: stefanzweifel/git-auto-commit-action@v5.0.1
         with:
-          commit_message: "chore(*): bump to version ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }} [skip ci]"
+          commit_message: "chore(release): bump to version ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }} [skip ci]"
      
-      - name: 🏷️✍️ Create new Prod release tag
+    #  to track version code and name
+      - name: 🏷️✍️ Create new UAT release tag
         uses: rickstaa/action-create-tag@v1
         with:
-          tag: "release/prod/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          message: "PROD release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
-          github_token: ${{ secrets.RELEASE_AUTOMATOR_PAT }}
+          tag: "release/uat/${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+          message: "Prod release ${{ steps.get_new_pubspec_version.outputs.next_pubspec_version }}"
+          github_token: ${{ secrets.RELEASE_AUTOMATION_PAT }}
 
   # deployProd:
   #   name: Deploy Prod
